# llm-sca-tooling

./: .coverage  .gitignore  .importlinter  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  audit_report.md  docker-compose.yml  evidence-sca.code-workspace  pyproject.toml  tox.ini
.agent/: harness-condition.phase-h0.json  harness-stage.json  plan.md  run_compliance_check.py  run_deep_research_check.py  src_files.txt
.agent/artifacts/: 00_init.json  01_register_repo.json  02_graph_build_accept.json  02_graph_build_result.json  03_impl_check_report.json  04_graph_build_result.json  05_bug_analysis.json  05_impl_check_report.json  05a_static_analysis_ruff.json  05b_static_analysis_bandit.json  06_readiness_report.json  08_audit_summary.json  09_impl_check_design.json  10_impl_check_sysarch.json  11_investigation_files.json  12_readiness_report.json  audit_spec_20260517.md  clause_investigation.json  compliance_report.md  compliance_report_deep.md  deep_01_register.json  deep_02_graph_build.json  deep_03_all_impl_checks.json  deep_04_clause_investigation.json  deep_06_readiness.json  deep_07_run_record.json  deep_08_summary.json  deep_bug_analysis.json  deep_compliance_report.md  deep_impl_deep-research-adaptive-pipeline-topology.json  deep_impl_deep-research-citation-graph-expansion-p.json  deep_impl_deep-research-evaluation-framework-gaps-.json  deep_impl_deep-research-kg-evaluation-benchmark-pl.json  deep_impl_deep-research-memory-system-integration-.json  deep_impl_deep-research-multi-agent-reliability-pl.json  deep_impl_deep-research-multi-run-comparison-plan.json  deep_impl_deep-research-q2d-query-augmentation-pla.json  deep_impl_deep-research-self-improving-retrieval-p.json  deep_impl_deep-research-system-architecture-design.json  deep_impl_deep-research-system-with-local-ai-agent.json  (+30 more)
.agent/docs/: ai-readiness-rubric.md  benchmark-integration-plan.md  drift-classifier.md  known-issues.md  plan-06-audit-skill-and-mcp-server-fixes.md  plan-07-next-session-re-audit-and-followups.md  run-record-contract.md  supply-chain-policy.md  telemetry-contract.md
.agent/eval/: hcs-release-v0.17.13.md  hcs-release-v0.17.8.md  readiness.md  review-release-v0.17.13.md  review-release-v0.17.8.md  stage-assessment.yaml  supply-chain-ledger.yaml
.agent/mcp-smoke/: workspace.db
.agent/policies/: commands.allowlist
.agent/skills/: architecture-compliance.md  code-audit.md  dependency-update.md  evaluation.md  release.md  safe-refactor.md  sast-repair.md  test-first-repair.md
.agent/templates/: harness-condition-sheet.md  incident-record.md  operational-review.md
.claude/: settings.json
.codex/: INSTRUCTIONS.md  config.toml
.devcontainer/: devcontainer.json  postCreate.sh
.github/: copilot-instructions.md
.github/workflow-templates/: llm-sca-tooling.yml
.github/workflows/: ci.yml  evidence-sca-ci.yml  governance.yml  llm-sca-tooling.yml  publish.yml  release.yml  verify.yml
.llm-sca/: mcp_tasks.json  workspace.db-shm
.llm-sca/.llm-sca/: workspace.db-shm  workspace.db-wal
.skills/: README.md  audit.SKILL.md  blast_radius.SKILL.md  impl_check.SKILL.md  investigate.SKILL.md  repair.SKILL.md  risk_classify.SKILL.md  sast_repair.SKILL.md
docs/: architecture-notes.md  architecture.md  completeness-report.md  devcontainer-template.md  docs-audit-findings-fix-plan.md  evaluation-guide.md  harness-condition-sheet.md  harness-setup-guide.md  harness.md  implementation-gap-verification-2026-05-10.md  incident-record-template.md  incident-response-guide.md  indexing.md  installation.md  llm-based-static-code-analysis-research-report.md  llm-sca-tooling-architecture.md  llm-sca-tooling-impl-check-clause-evidence-gap.md  llm-sca-tooling-implementation-plan.md  llm-sca-tooling-phase-0-python-package-skeleton.md  llm-sca-tooling-phase-1-shared-schemas-and-evidence-model.md  llm-sca-tooling-phase-10-evaluation-harness-baseline.md  llm-sca-tooling-phase-11-patch-review-and-risk-gates.md  llm-sca-tooling-phase-12-static-analysis-alert-repair.md  llm-sca-tooling-phase-13-bug-resolve-workflow.md  llm-sca-tooling-phase-14-implementation-check-workflow.md  llm-sca-tooling-phase-15-blast-radius.md  llm-sca-tooling-phase-16-dynamic-trace-augmentation.md  llm-sca-tooling-phase-17-trajectory-memory-and-experience-replay.md  llm-sca-tooling-phase-18-full-evaluation-calibration-and-release-gates.md  llm-sca-tooling-phase-19-operational-hardening-and-distribution.md  llm-sca-tooling-phase-2-local-graph-store-and-repository-registry.md  llm-sca-tooling-phase-3-repository-indexing-mvp.md  llm-sca-tooling-phase-4-mcp-server-core.md  llm-sca-tooling-phase-5-language-backend-expansion.md  llm-sca-tooling-phase-6-sarif-and-static-analysis-layer.md  llm-sca-tooling-phase-7-cross-language-interface-plugin-system.md  llm-sca-tooling-phase-8-repository-query-and-repo-qa-mvp.md  llm-sca-tooling-phase-9-fault-localisation.md  llm-sca-tooling-phase-h0-harness-quality-foundation.md  llm-sca-tooling-tech-stack.md  (+11 more)
docs/notebooks/: poc.ipynb
fixtures/: manifest.json
schemas/: evidence.schema.json  governance.schema.json  graph.schema.json  harness-condition.schema.json  incident.schema.json  readiness.schema.json  run-record.schema.json  sarif-schema-2.1.0.json  verdict.schema.json
src/llm_sca_tooling/: __init__.py  config.py  errors.py
tests/: conftest.py
tests/adversarial/: test_prompt_injection.py
tests/blast_radius/: conftest.py  test_abi_impact.py  test_ambiguous_links.py  test_blast_radius_template.py  test_change_type.py  test_cross_repo.py  test_doc_spec_impact.py  test_generated_stub.py  test_graph_traversal.py  test_impact_groups.py  test_phase15_blast_radius.py  test_report.py  test_sarif_reachability.py  test_service.py  test_traversal_policy.py
tests/cli/: test_harness_status.py
tests/docs/: test_phase19_docs.py
tests/evaluation/: conftest.py  test_adapters_metrics_runner.py  test_eval_mcp.py  test_models_and_hcs.py  test_phase10_evaluation.py  test_phase18_tiers.py  test_rds_features_v2.py  test_t2_runner.py
(+1582 files in other folders)
