[project]
name = "llm-sca-tooling"
version = "0.3.5"
description = "LLM-augmented static code analysis tooling"
requires-python = ">=3.12"
dependencies = [
    # core data / config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # CLI
    "typer>=0.12",
    "rich>=13.0",
    # API + MCP
    "fastapi>=0.115",
    "fastmcp>=2.0",
    "uvicorn[standard]>=0.30",
    # database
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    # graph
    "networkx>=3.3",
    # HTTP client
    "httpx>=0.27",
    # JSON Schema validation
    "jsonschema>=4.23",
    # serialisation
    "orjson>=3.10",
    "ruamel.yaml>=0.18",
    # XML / HTML parsing
    "lxml>=5.2",
    "defusedxml>=0.7",
    "selectolax>=0.3",
    # Markdown
    "markdown-it-py>=3.0",
    # embeddings — uncomment in Phase 9
    # "fastembed>=0.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "pyan3>=2.6.0",
    # file system monitoring (Phase 19)
    "watchdog>=4.0",
]

[project.scripts]
llm-sca-tooling = "llm_sca_tooling.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_sca_tooling"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "schemas/", "docs/"]
exclude = [".devcontainer/", "*.jsonl"]

[dependency-groups]
dev = [
    # testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
    # code quality
    "mypy>=1.10",
    "ruff>=0.4",
    "isort>=5.13",
    "black>=24.0",
    "import-linter>=2.1",
    # security
    "bandit[toml]>=1.7",
    "detect-secrets>=1.5",
    "pip-audit>=2.7",
    # pre-commit
    "pre-commit>=3.7",
    # test fixture generation
    "jsf>=0.11",
    # type stubs
    "types-jsonschema",
    "lxml-stubs",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
/(
    \.agent
  | \.venv
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".agent/"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "S",        # bandit (flake8-bandit)
    "B",        # bugbear
    "A",        # flake8-builtins
    "C4",       # flake8-comprehensions
    "DTZ",      # flake8-datetimez
    "T20",      # flake8-print
    "RET",      # flake8-return
    "SIM",      # flake8-simplify
    "PTH",      # flake8-use-pathlib
    "ERA",      # eradicate
]
ignore = [
    "S101",     # assert in tests is fine
    "UP042",    # str,Enum and StrEnum are equivalent; migration is cosmetic
    "UP047",    # TypeVar generics preferred for Python 3.11 compat; cosmetic in 3.12+
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "ERA001", "E501", "B017", "RET504"]
"src/llm_sca_tooling/storage/**" = ["E501", "S607", "SIM108", "SIM117", "A002", "N817"]
"src/llm_sca_tooling/operations/**" = ["E501", "S306"]
"src/llm_sca_tooling/hardening/**" = ["E501", "S324"]
"src/llm_sca_tooling/privacy/**" = ["E501"]
"src/llm_sca_tooling/transport/**" = ["E501"]
"src/llm_sca_tooling/indexing/**" = ["E501", "S112", "ERA001"]
"fixtures/**" = ["T20", "S101"]
"src/llm_sca_tooling/cli/**" = ["B008", "E501"]  # Typer requires Option/Argument in defaults

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["networkx.*", "fastmcp.*", "sqlmodel.*", "alembic.*", "watchdog.*", "uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-ra", "--tb=short"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", "fixtures"]
skips = ["B404", "B603", "B607"]  # subprocess usage is intentional in CLI layer

[tool.importlinter]
root_packages = ["llm_sca_tooling"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Rich is restricted to the cli layer"
type = "forbidden"
source_modules = [
    "llm_sca_tooling.config",
    "llm_sca_tooling.errors",
    "llm_sca_tooling.telemetry",
    "llm_sca_tooling.operations",
    "llm_sca_tooling.governance",
    "llm_sca_tooling.plugins",
    "llm_sca_tooling.harness",
    "llm_sca_tooling.mcp_server",
    "llm_sca_tooling.schemas",
    "llm_sca_tooling.graph",
    "llm_sca_tooling.indexing",
    "llm_sca_tooling.sarif",
    "llm_sca_tooling.workflows",
    "llm_sca_tooling.evaluation",
    "llm_sca_tooling.memory",
    "llm_sca_tooling.hardening",
    "llm_sca_tooling.privacy",
    "llm_sca_tooling.transport",
]
forbidden_modules = ["rich"]

[[tool.mypy.overrides]]
# SQLAlchemy ORM column expressions produce complex types that mypy strict
# mode flags as bool/Any mismatches in .where() and .execute() calls.
# The storage layer is integration-tested; mypy strictness is relaxed here.
module = ["llm_sca_tooling.storage.*"]
ignore_errors = true
